# python-kafka-example

./: config.yaml  consumer.py  create_topic.bash  producer.py  pyproject.toml
